fix:translation fix

--- a/src/shared/model/i18n/locales/en/en.json
+++ b/src/shared/model/i18n/locales/en/en.json
@@ -22,6 +22,7 @@
   "от": "from",
   "Минимальная сумма депозита": "Minimum deposit amount",
   "дней": "days",
+  "Срок депозита": "Deposit term",
   "Оформить": "Apply",
   "Назад": "Back",
   "Вперед": "Next",
@@ -128,7 +129,7 @@
   "Информация о счете": "Account Information",
   "История операций": "Transaction history",
   "Счет не найден": "Account not found",
-  "Войдите в личный кабинет": "Log in to your personal account",
+  "Авторизация": "Authorization",
   "Введите код из смс": "Enter the code from SMS",
   "Введите пароль": "Enter password",
   "Условия пролонгации депозита": "Terms of deposit extension",
@@ -137,6 +138,8 @@
   "Вернуться к странице депозита": "Return to deposit page",
   "Срок пролонгации": "Extension period",
   "Пролонгировать депозит": "Extend deposit",
+  "Депозит не найден": "Deposit not found",
+  "Перейти к списку депозитов": "Go to the list of deposits",
   "№ счета : ": "№ accounts : ",
   "№ счета с процентами : ": "№ interest-bearing accounts : ",
   "Схема депозита": "Deposit scheme",
@@ -147,8 +150,6 @@
   "Изначальная сумма депозита": "Initial deposit amount",
   "Отозвать": "Withdraw",
   "Пополнить": "Top-up",
-  "Депозит не найден": "Deposit not found",
-  "Перейти к списку депозитов": "Go to the list of deposits",
   "График начисления процентов": "Interest accrual schedule",
   "Информация о пополнении депозита": "Deposit top-up information",
   "Пролонгация депозита": "Deposit renewal",
@@ -239,7 +240,6 @@
   "На данный момент \n у Вас нет депозитов": "You currently have no deposits",
   "Оформить депозит": "Open deposit",
   "Сумма депозита": "Deposit amount",
-  "Срок депозита": "Deposit term",
   "Сбросить фильтр": "Reset filter",
   "Депозиты A-geld": "Deposits A-geld",
   "2023, АО «A-Geld», официальный сайт, универсальная лицензия ЦБ РФ № 2475": "2023, A-geld JSC, official site, universal license of the Central Bank of the Russian Federation No. 2475",
@@ -252,15 +252,15 @@
   "Документы": "Documents",
   "Вопросы и ответы": "Q&A",
   "Войти": "Log in",
+  "Успех": "Success",
+  "Ошибка": "Error",
+  "Операция прошла успешно": "Operation completed successfully",
+  "Повторите запрос позже": "Please try again later",
   "Новая карта": "New card",
   "Между счетами": "Between accounts",
   "По номеру телефона": "By phone number",
   "По номеру карты": "By card number",
   "По реквизитам": "By requisites",
   "Мобильная связь": "Mobile communication",
-  "Коммунальные платежи": "Utility payments",
-  "Успех": "Success",
-  "Ошибка": "Error",
-  "Операция прошла успешно": "Operation completed successfully",
-  "Повторите запрос позже": "Please try again later"
+  "Коммунальные платежи": "Utility payments"
 }
