--- a/src/shared/model/i18n/locales/en/en_old.json
+++ b/src/shared/model/i18n/locales/en/en_old.json
@@ -9,5 +9,6 @@
   "Процентная ставка при досрочном отзыве депозита": "Interest rate for early deposit withdrawal",
   "Выполнить депозит": "Make a deposit",
   "Банки и отделения": "Banks and branches",
-  "Публичным договором ": "Public contract "
+  "Публичным договором ": "Public contract ",
+  "Войдите в личный кабинет": "Log in to your personal account"
 }
