--- a/src/shared/model/i18n/locales/ru/ru.json
+++ b/src/shared/model/i18n/locales/ru/ru.json
@@ -22,6 +22,7 @@
   "от": "от",
   "Минимальная сумма депозита": "Минимальная сумма депозита",
   "дней": "дней",
+  "Срок депозита": "Срок депозита",
   "Оформить": "Оформить",
   "Назад": "Назад",
   "Вперед": "Вперед",
@@ -128,7 +129,7 @@
   "Информация о счете": "Информация о счете",
   "История операций": "История операций",
   "Счет не найден": "Счет не найден",
-  "Войдите в личный кабинет": "Войдите в личный кабинет",
+  "Авторизация": "Авторизация",
   "Введите код из смс": "Введите код из смс",
   "Введите пароль": "Введите пароль",
   "Условия пролонгации депозита": "Условия пролонгации депозита",
@@ -137,6 +138,8 @@
   "Вернуться к странице депозита": "Вернуться к странице депозита",
   "Срок пролонгации": "Срок пролонгации",
   "Пролонгировать депозит": "Пролонгировать депозит",
+  "Депозит не найден": "Депозит не найден",
+  "Перейти к списку депозитов": "Перейти к списку депозитов",
   "№ счета : ": "№ счета : ",
   "№ счета с процентами : ": "№ счета с процентами : ",
   "Схема депозита": "Схема депозита",
@@ -147,8 +150,6 @@
   "Изначальная сумма депозита": "Изначальная сумма депозита",
   "Отозвать": "Отозвать",
   "Пополнить": "Пополнить",
-  "Депозит не найден": "Депозит не найден",
-  "Перейти к списку депозитов": "Перейти к списку депозитов",
   "График начисления процентов": "График начисления процентов",
   "Информация о пополнении депозита": "Информация о пополнении депозита",
   "Пролонгация депозита": "Пролонгация депозита",
@@ -239,7 +240,6 @@
   "На данный момент \n у Вас нет депозитов": "На данный момент \n у Вас нет депозитов",
   "Оформить депозит": "Оформить депозит",
   "Сумма депозита": "Сумма депозита",
-  "Срок депозита": "Срок депозита",
   "Сбросить фильтр": "Сбросить фильтр",
   "Депозиты A-geld": "Депозиты A-geld",
   "2023, АО «A-Geld», официальный сайт, универсальная лицензия ЦБ РФ № 2475": "2023, АО «A-Geld», официальный сайт, универсальная лицензия ЦБ РФ № 2475",
@@ -252,15 +252,15 @@
   "Документы": "Документы",
   "Вопросы и ответы": "Вопросы и ответы",
   "Войти": "Войти",
+  "Успех": "Успех",
+  "Ошибка": "Ошибка",
+  "Операция прошла успешно": "Операция прошла успешно",
+  "Повторите запрос позже": "Повторите запрос позже",
   "Новая карта": "Новая карта",
   "Между счетами": "Между счетами",
   "По номеру телефона": "По номеру телефона",
   "По номеру карты": "По номеру карты",
   "По реквизитам": "По реквизитам",
   "Мобильная связь": "Мобильная связь",
-  "Коммунальные платежи": "Коммунальные платежи",
-  "Успех": "Успех",
-  "Ошибка": "Ошибка",
-  "Операция прошла успешно": "Операция прошла успешно",
-  "Повторите запрос позже": "Повторите запрос позже"
+  "Коммунальные платежи": "Коммунальные платежи"
 }
