--- a/src/shared/model/i18n/locales/ru/ru_old.json
+++ b/src/shared/model/i18n/locales/ru/ru_old.json
@@ -8,5 +8,6 @@
   "Процентная ставка при досрочном отзыве депозита": "Процентная ставка при досрочном отзыве депозита",
   "Выполнить депозит": "Выполнить депозит",
   "Банки и отделения": "Банки и отделения",
-  "Публичным договором ": "Публичным договором "
+  "Публичным договором ": "Публичным договором ",
+  "Войдите в личный кабинет": "Войдите в личный кабинет"
 }
