feat: AGEL-1647 локализация и интернализация Главной страницы

--- a/src/shared/model/i18n/locales/en/en.json
+++ b/src/shared/model/i18n/locales/en/en.json
@@ -203,6 +203,11 @@
   "Заблокированный": "Blocked",
   "Автопролонгация": "Autoprolongation",
   "Автопролонгация отключена": "Autoprolongation disabled",
+  "предыдущий слайд": "previous slide",
+  "актуальный слайд": "current slide",
+  "следующий слайд": "next slide",
+  "переключить назад": "turn back",
+  "переключить вперед": "turn forward",
   "Мои счета": "My accounts",
   "Открытые счета": "Opened accounts",
   "Заявки на открытие счета": "Open account requests",
@@ -252,6 +257,14 @@
   "Документы": "Documents",
   "Вопросы и ответы": "Q&A",
   "Войти": "Log in",
+  "Курсы валют:": "Exchange rates:",
+  "Больше валют ": "More ",
+  "О банке:": "About the bank:",
+  "Первый в рейтинге": "First in the ranking",
+  "Самые": "Most",
+  "доходные": "profitable",
+  "депозиты": "deposits",
+  "Банк A-Geld - место, где работают ваши деньги": "A-Geld Bank - the place where your money works",
   "Успех": "Success",
   "Ошибка": "Error",
   "Операция прошла успешно": "Operation completed successfully",
@@ -262,5 +275,14 @@
   "По номеру карты": "By card number",
   "По реквизитам": "By requisites",
   "Мобильная связь": "Mobile communication",
-  "Коммунальные платежи": "Utility payments"
+  "Коммунальные платежи": "Utility payments",
+  "Депозит Premium": "Deposit Premium",
+  "Можем закрыть в любой момент времени, без перерасчета % Возможность частичного снятия Возможность пополнения\nСрок от 180 дней и выше": "Can be closed at any moment without recalculation of interest. Possibility of partial withdrawal. Possibility of deposit expansion.For a period of 180 days or more.",
+  "Открыть депозит":"Open a deposit",
+  "Кредитная карта":"Credit card",
+  "Целый год без %\nБесплатное обслуживание и кэшбэк за все покупки":"A whole year without paying interest! No maintenance fee and cashback for all purchases!",
+  "Получить карту":"Get a card",
+  "Кэшбэк на любые покупки":"Cashback on any purchases",
+  "Каждый месяц выбирайте 4 категории с кэшбэком 5%. Товары для дома, цветы, такси Вам решать, на что тратить чаще в этом месяце, чтобы получить максимум выгоды":"Every month select 4 categories with 5% cashback. Household products, flowers, taxi, its up to you to decide what to spend on this month to get maximum benefit.",
+  "Хочу кэшбек!":"I want cashback!"
 }
