--- a/src/shared/model/i18n/locales/ru/ru.json
+++ b/src/shared/model/i18n/locales/ru/ru.json
@@ -203,6 +203,11 @@
   "Заблокированный": "Заблокированный",
   "Автопролонгация": "Автопролонгация",
   "Автопролонгация отключена": "Автопролонгация отключена",
+  "предыдущий слайд": "предыдущий слайд",
+  "актуальный слайд": "актуальный слайд",
+  "следующий слайд": "следующий слайд",
+  "переключить назад": "переключить назад",
+  "переключить вперед": "переключить вперед",
   "Мои счета": "Мои счета",
   "Открытые счета": "Открытые счета",
   "Заявки на открытие счета": "Заявки на открытие счета",
@@ -252,6 +257,14 @@
   "Документы": "Документы",
   "Вопросы и ответы": "Вопросы и ответы",
   "Войти": "Войти",
+  "Курсы валют:": "Курсы валют:",
+  "Больше валют ": "Больше валют ",
+  "О банке:": "О банке:",
+  "Первый в рейтинге": "Первый в рейтинге",
+  "Самые": "Самые",
+  "доходные": "доходные",
+  "депозиты": "депозиты",
+  "Банк A-Geld - место, где работают ваши деньги": "Банк A-Geld - место, где работают ваши деньги",
   "Успех": "Успех",
   "Ошибка": "Ошибка",
   "Операция прошла успешно": "Операция прошла успешно",
@@ -262,5 +275,14 @@
   "По номеру карты": "По номеру карты",
   "По реквизитам": "По реквизитам",
   "Мобильная связь": "Мобильная связь",
-  "Коммунальные платежи": "Коммунальные платежи"
+  "Коммунальные платежи": "Коммунальные платежи",
+  "Депозит Premium": "Депозит Premium",
+  "Можем закрыть в любой момент времени, без перерасчета % Возможность частичного снятия Возможность пополнения\nСрок от 180 дней и выше": "Можем закрыть в любой момент времени, без перерасчета % Возможность частичного снятия Возможность пополнения\nСрок от 180 дней и выше",
+  "Открыть депозит":"Открыть депозит",
+  "Кредитная карта":"Кредитная карта",
+  "Целый год без %\nБесплатное обслуживание и кэшбэк за все покупки":"Целый год без %\nБесплатное обслуживание и кэшбэк за все покупки",
+  "Получить карту":"Получить карту",
+  "Кэшбэк на любые покупки":"Кэшбэк на любые покупки",
+  "Каждый месяц выбирайте 4 категории с кэшбэком 5%. Товары для дома, цветы, такси Вам решать, на что тратить чаще в этом месяце, чтобы получить максимум выгоды":"Каждый месяц выбирайте 4 категории с кэшбэком 5%. Товары для дома, цветы, такси Вам решать, на что тратить чаще в этом месяце, чтобы получить максимум выгоды",
+  "Хочу кэшбек!":"Хочу кэшбек!"
 }
