fix: i18next, MainMenu, Carousel, MultiStepForm, FormCard

--- a/src/shared/model/i18n/locales/en/en.json
+++ b/src/shared/model/i18n/locales/en/en.json
@@ -77,11 +77,9 @@
   "Продолжить": "Continue",
   "Номер телефона": "Phone number",
   "Номер телефона должен содержать 11 цифр": "Phone number must contain 11 digits",
-  "Нажав кнопку «Далее», вы соглашаетесь с ": "By clicking the 'Next' button, you agree to ",
-  "Правилами дистанционного банковского обслуживания": "the Remote Banking Service Rules",
-  "и": "and",
-  "Политикой конфиденциальности": "Privacy Policy",
-  "и даёте согласие на сбор и обработку информации": "and consent to the collection and processing of information",
+  "Нажав кнопку \"Принять\" вы соглашаетесь с текстом": "By clicking the \"Accept\" button you agree with the text",
+  "Публичного договора": "Public contract",
+  "Принять": "Accept",
   "Отклонить": "Decline",
   "Поиск": "Search",
   "Количество символов от 6 до 20": "Number of characters from 6 to 20",
@@ -257,6 +255,15 @@
   "Документы": "Documents",
   "Вопросы и ответы": "Q&A",
   "Войти": "Log in",
+  "Депозит Premium": "Deposit Premium",
+  "Можем закрыть в любой момент времени, без перерасчета % Возможность частичного снятия Возможность пополнения\nСрок от 180 дней и выше": "Can be closed at any moment without recalculation of interest. Possibility of partial withdrawal. Possibility of deposit expansion.For a period of 180 days or more.",
+  "Открыть депозит": "Open a deposit",
+  "Кредитная карта": "Credit card",
+  "Целый год без %\nБесплатное обслуживание и кэшбэк за все покупки": "A whole year without paying interest! No maintenance fee and cashback for all purchases!",
+  "Получить карту": "Get a card",
+  "Кэшбэк на любые покупки": "Cashback on any purchases",
+  "Каждый месяц выбирайте 4 категории с кэшбэком 5%. Товары для дома, цветы, такси Вам решать, на что тратить чаще в этом месяце, чтобы получить максимум выгоды": "Every month select 4 categories with 5% cashback. Household products, flowers, taxi, its up to you to decide what to spend on this month to get maximum benefit.",
+  "Хочу кэшбек!": "I want cashback!",
   "Курсы валют:": "Exchange rates:",
   "Больше валют ": "More ",
   "О банке:": "About the bank:",
@@ -275,14 +282,5 @@
   "По номеру карты": "By card number",
   "По реквизитам": "By requisites",
   "Мобильная связь": "Mobile communication",
-  "Коммунальные платежи": "Utility payments",
-  "Депозит Premium": "Deposit Premium",
-  "Можем закрыть в любой момент времени, без перерасчета % Возможность частичного снятия Возможность пополнения\nСрок от 180 дней и выше": "Can be closed at any moment without recalculation of interest. Possibility of partial withdrawal. Possibility of deposit expansion.For a period of 180 days or more.",
-  "Открыть депозит":"Open a deposit",
-  "Кредитная карта":"Credit card",
-  "Целый год без %\nБесплатное обслуживание и кэшбэк за все покупки":"A whole year without paying interest! No maintenance fee and cashback for all purchases!",
-  "Получить карту":"Get a card",
-  "Кэшбэк на любые покупки":"Cashback on any purchases",
-  "Каждый месяц выбирайте 4 категории с кэшбэком 5%. Товары для дома, цветы, такси Вам решать, на что тратить чаще в этом месяце, чтобы получить максимум выгоды":"Every month select 4 categories with 5% cashback. Household products, flowers, taxi, its up to you to decide what to spend on this month to get maximum benefit.",
-  "Хочу кэшбек!":"I want cashback!"
+  "Коммунальные платежи": "Utility payments"
 }
