--- a/src/shared/model/i18n/locales/en/en_old.json
+++ b/src/shared/model/i18n/locales/en/en_old.json
@@ -10,5 +10,10 @@
   "Выполнить депозит": "Make a deposit",
   "Банки и отделения": "Banks and branches",
   "Публичным договором ": "Public contract ",
-  "Войдите в личный кабинет": "Log in to your personal account"
+  "Войдите в личный кабинет": "Log in to your personal account",
+  "Нажав кнопку «Далее», вы соглашаетесь с ": "By clicking the 'Next' button, you agree to ",
+  "Правилами дистанционного банковского обслуживания": "the Remote Banking Service Rules",
+  "и": "and",
+  "Политикой конфиденциальности": "Privacy Policy",
+  "и даёте согласие на сбор и обработку информации": "and consent to the collection and processing of information"
 }
