--- a/src/shared/model/i18n/locales/ru/ru_old.json
+++ b/src/shared/model/i18n/locales/ru/ru_old.json
@@ -9,5 +9,10 @@
   "Выполнить депозит": "Выполнить депозит",
   "Банки и отделения": "Банки и отделения",
   "Публичным договором ": "Публичным договором ",
-  "Войдите в личный кабинет": "Войдите в личный кабинет"
+  "Войдите в личный кабинет": "Войдите в личный кабинет",
+  "Нажав кнопку «Далее», вы соглашаетесь с ": "Нажав кнопку «Далее», вы соглашаетесь с ",
+  "Правилами дистанционного банковского обслуживания": "Правилами дистанционного банковского обслуживания",
+  "и": "и",
+  "Политикой конфиденциальности": "Политикой конфиденциальности",
+  "и даёте согласие на сбор и обработку информации": "и даёте согласие на сбор и обработку информации"
 }
