feat: AGEL-1425 добавлена локализация в разделах банкоматы и отделения, контакты

--- a/src/shared/model/i18n/locales/en/en.json
+++ b/src/shared/model/i18n/locales/en/en.json
@@ -284,5 +284,43 @@
   "Получить карту":"Get a card",
   "Кэшбэк на любые покупки":"Cashback on any purchases",
   "Каждый месяц выбирайте 4 категории с кэшбэком 5%. Товары для дома, цветы, такси Вам решать, на что тратить чаще в этом месяце, чтобы получить максимум выгоды":"Every month select 4 categories with 5% cashback. Household products, flowers, taxi, its up to you to decide what to spend on this month to get maximum benefit.",
-  "Хочу кэшбек!":"I want cashback!"
+  "Хочу кэшбек!":"I want cashback!",
+  "Успех": "Success",
+  "Ошибка": "Error",
+  "Операция прошла успешно": "Operation completed successfully",
+  "Повторите запрос позже": "Please try again later",
+  "Горячая линия для частных лиц": "A hotline for individuals",
+  "Бесплатный звонок по России": "Free call in Russia",
+  "Для звонков за пределами России": "For calls outside Russia",
+  "Для жителей Москвы и Московской области": "For residents of Moscow and the Moscow region",
+  "Чат-боты в социальных сетях": "Chatbots on social networks",
+  "Вконтакте": "Vkontakte",
+  "Чат с банком": "Chat with the bank",
+  "Режим работы": "Operating mode",
+  "Консультация физических лиц": "Consultation of individuals",
+  "Консультация юридических лиц": "Consultation of legal entities",
+  "Блокировка карты": "Blocking the card",
+  "круглосуточно": "around the clock",
+  "Понедельник - Пятница: ": "Monday - Friday: ",
+  "Суббота: ": "Saturday: ",
+  "Воскресенье - ": "Sunday - ",
+  "выходной": "weekend",
+  "Горячая линия корпоративным клиентам": "Hotline for corporate clients",
+  "Техническая поддержка": "Technical support",
+  "Объекты в": "Objects in",
+  "Москве": "Moscow",
+  "Поиск по адресу или названию": "Search by address or name",
+  "Пыталово": "Pytalovo",
+  "Пыталовский": "Pytalovsky",
+  "Новый город": "A new city",
+  "4B": "4V",
+  "3B": "3V",
+  "Понедельник - Пятница: 9:00-19:00 Cуббота: 10:00-15:00 Воскресенье - выходной": "Monday - Friday: 9:00-19:00 Saturday: 10:00-15:00 Sunday - weekend",
+  "Понедельник - Пятница: 10:00-14:00 Cуббота: 11:00-13:00 Воскресенье - выходной": "Monday - Friday: 10:00-14:00 Saturday: 11:00-13:00 Sunday - weekend",
+  "Открыто до ": "Open until ",
+  "Закрыто до ": "Closed until",
+  "Показать полную информацию": "Show full information",
+  "Вернуться к списку": "Go back to the list",
+  "Открыто круглосуточно": "It is open around the clock",
+  "Без выходных, круглосуточно": "Seven days a week, around the clock"
 }
