feat: AGEL-1660 - Актуализация Input, Button, Icon, Text                 - Добавлено Switcher, Preloader, Radio, SliderInput, Checkbox, Link, Form, Container, Card, Columns, AsideMenu                 - Рефакторинг Checkbox, Carousel

--- a/src/shared/model/i18n/locales/en/en.json
+++ b/src/shared/model/i18n/locales/en/en.json
@@ -263,7 +263,7 @@
   "Получить карту": "Get a card",
   "Кэшбэк на любые покупки": "Cashback on any purchases",
   "Каждый месяц выбирайте 4 категории с кэшбэком 5%. Товары для дома, цветы, такси Вам решать, на что тратить чаще в этом месяце, чтобы получить максимум выгоды": "Every month select 4 categories with 5% cashback. Household products, flowers, taxi, its up to you to decide what to spend on this month to get maximum benefit.",
-  "Хочу кэшбек!": "I want cashback!",
+  "Хочу кэшбэк!": "I want cashback!",
   "Курсы валют:": "Exchange rates:",
   "Больше валют ": "More ",
   "О банке:": "About the bank:",
