--- a/src/shared/model/i18n/locales/ru/ru.json
+++ b/src/shared/model/i18n/locales/ru/ru.json
@@ -23,7 +23,6 @@
   "Минимальная сумма депозита": "Минимальная сумма депозита",
   "дней": "дней",
   "Срок депозита": "Срок депозита",
-  "Срок депозита": "Срок депозита",
   "Оформить": "Оформить",
   "Назад": "Назад",
   "Вперед": "Вперед",
@@ -264,7 +263,7 @@
   "Получить карту": "Получить карту",
   "Кэшбэк на любые покупки": "Кэшбэк на любые покупки",
   "Каждый месяц выбирайте 4 категории с кэшбэком 5%. Товары для дома, цветы, такси Вам решать, на что тратить чаще в этом месяце, чтобы получить максимум выгоды": "Каждый месяц выбирайте 4 категории с кэшбэком 5%. Товары для дома, цветы, такси Вам решать, на что тратить чаще в этом месяце, чтобы получить максимум выгоды",
-  "Хочу кэшбек!": "Хочу кэшбек!",
+  "Хочу кэшбэк!": "Хочу кэшбэк!",
   "Курсы валют:": "Курсы валют:",
   "Больше валют ": "Больше валют ",
   "О банке:": "О банке:",
