feat:AGEL-1760 Localization of deposits updated

--- a/src/shared/model/i18n/locales/en/en.json
+++ b/src/shared/model/i18n/locales/en/en.json
@@ -14,16 +14,24 @@
   "Перевести": "Transfer",
   "Оформить карту": "Apply for a card",
   "Показать больше": "Show more",
-  "Процентная ставка": "Interest rate",
-  "Сумма на депозитном счете": "Deposit balance",
-  "Окончание срока вклада": "Deposit end of term",
   "До 30 сентября оформите ": "Apply before September 30 ",
   "до": "up to",
+  "Процентная ставка": "Interest rate",
   "от": "from",
   "Минимальная сумма депозита": "Minimum deposit amount",
   "дней": "days",
   "Срок депозита": "Deposit term",
   "Оформить": "Apply",
+  "Не откладывай жизнь на завтра!": "Don't put off life until tomorrow!",
+  " откроет новые горизонты для вас": " will open new horizons for you",
+  "Максимальная сумма депозита": "Maximum deposit amount",
+  "месяцев": "months",
+  "Подробная информация": "Detailed information",
+  "Номер депозитного счета": "Deposit account number",
+  "Сумма на депозитном счете": "Deposit balance",
+  "Окончание срока депозита": "Deposit expiration date",
+  "Сумма в конце срока": "Amount at the end of the term",
+  "Доход по депозиту": "Deposit income",
   "Назад": "Back",
   "Вперед": "Next",
   "Основной": "Main",
@@ -82,6 +90,8 @@
   "Принять": "Accept",
   "Отклонить": "Decline",
   "Поиск": "Search",
+  "Сумма депозита": "Deposit amount",
+  "мес": "mths",
   "Количество символов от 6 до 20": "Number of characters from 6 to 20",
   "Есть строчные и заглавные буквы": "There are lowercase and uppercase letters",
   "Есть цифры": "There are numbers",
@@ -127,27 +137,78 @@
   "Информация о счете": "Account Information",
   "История операций": "Transaction history",
   "Счет не найден": "Account not found",
+  "Закрыто до ": "Closed until",
+  "Открыто до ": "Open until ",
+  "Открыто круглосуточно": "It is open around the clock",
+  "Показать полную информацию": "Show full information",
+  "Вернуться к списку": "Go back to the list",
+  "Поиск по адресу или названию": "Search by address or name",
   "Авторизация": "Authorization",
   "Введите код из смс": "Enter the code from SMS",
   "Введите пароль": "Enter password",
+  "Контакты": "Contacts",
+  "Горячая линия для частных лиц": "A hotline for individuals",
+  "Горячая линия корпоративным клиентам": "Hotline for corporate clients",
+  "Техническая поддержка": "Technical support",
+  "Чат-боты в социальных сетях": "Chatbots on social networks",
+  "Режим работы": "Operating mode",
+  "Консультация физических лиц": "Consultation of individuals",
+  "Консультация юридических лиц": "Consultation of legal entities",
+  "Блокировка карты": "Blocking the card",
+  "круглосуточно": "around the clock",
+  "Вы действительно хотите открыть депозит?": "Вы действительно хотите открыть депозит?",
+  "Отмена": "Отмена",
+  "Депозит A-Geld Базовый": "Депозит A-Geld Базовый",
+  "RUB": "RUB",
+  "Капитализация": "Capitalization",
+  "Без капитализации": "No capitalization",
+  "Ежедневная": "Daily",
+  "Ежемесячная": "Monthly",
+  "Ежеквартальная": "Quarterly",
+  "Полугодовая": "Semi-annual",
+  "Ежегодная": "Annual",
+  "Автоматическая пролонгация": "Automatic prolongation",
+  "С пополнением": "With refill",
+  "С частичным снятием": "With partial withdrawal",
+  "Закрытие в любой момент времени без перерасчета %": "Closure at any point without recalculation of interest",
+  "Отказаться": "Decline",
+  "Оформить депозит": "Open deposit",
+  "Не удалось оформить депозит": "Failed to issue a deposit",
+  "Ваш депозит успешно оформлен": "Your deposit is successfully ",
+  "Вернуться к странице депозитов": "Return to deposits page",
   "Условия пролонгации депозита": "Terms of deposit extension",
   "Не удалось пролонгировать депозит": "Failed to renew the deposit",
   "Ваш депозит успешно пролонгирован": "Your deposit has been successfully extended",
   "Вернуться к странице депозита": "Return to deposit page",
-  "Срок пролонгации": "Extension period",
   "Пролонгировать депозит": "Extend deposit",
+  "Гибкие условия": "Flexible terms",
+  "Депозит от 1 до 36 месяцев с возможностью пополнения": "Depoist from 1 to 36 months with replenishment possibility",
+  "Капитализация процентов": "Interest rate capitalization",
+  "Проценты присоединяются к сумме депозита": "Interest is added to the deposit amount",
+  "Управление онлайн": "Online management",
+  "Открыть, пополнить и закрыть депозит можно через интернет-банк": "Открыть, пополнить и закрыть депозит можно через интернет-банк",
+  "Дополнительные взносы": "Additional fees",
+  "В зависимости от условий по депозиту вы можете совершать дополнительные взносы и увеличивать свой доход": "You can open, top up and close a deposit via Internet banking",
+  "Выбор из трех валют": "Choice of three currencies",
+  "Выбирайте оптимальные валюту и условия по депозиту": "Choose the optimal currency and deposit conditions",
+  "Удобное пополнение": "Convenient replenishment",
+  "Пополнение через интернет-банк или в отделениях.": "Replenishment via online banking or in branches.",
   "Депозит не найден": "Deposit not found",
   "Перейти к списку депозитов": "Go to the list of deposits",
   "№ счета : ": "№ accounts : ",
   "№ счета с процентами : ": "№ interest-bearing accounts : ",
-  "Схема депозита": "Deposit scheme",
+  "Тип продукта по сроку": "Product type by duration",
   "Срочный": "Urgent",
-  "Длительность существования": "Term of existence",
-  "Ставка при досрочном отзыве": "Rate for early withdrawal",
+  "Бессрочный": "Unlimited",
   "Отзывной": "Revocable",
+  "Вид капитализации процентов": "Capitalization type",
+  "Дата открытия": "Opening date",
+  "Автоматическая пролонгации": "Autoprolongation",
   "Изначальная сумма депозита": "Initial deposit amount",
   "Отозвать": "Withdraw",
   "Пополнить": "Top-up",
+  "Вы действительно хотите включить автоматическую пролонгацию депозита?": "Вы действительно хотите включить автоматическую пролонгацию депозита?",
+  "Вы действительно хотите отключить автоматическую пролонгацию депозита?": "Вы действительно хотите отключить автоматическую пролонгацию депозита?",
   "График начисления процентов": "Interest accrual schedule",
   "Информация о пополнении депозита": "Deposit top-up information",
   "Пролонгация депозита": "Deposit renewal",
@@ -192,6 +253,18 @@
   "Дебетовая": "Debit",
   "Депозитная": "Deposit",
   "МИР": "MIR",
+  "2 месяца": "2 months",
+  "3 месяца": "3 months",
+  "6 месяцев": "6 months",
+  "9 месяцев": "9 months",
+  "1 год": "1 year",
+  "2 года": "2 year",
+  "3 года": "3 year",
+  "Другой срок": "Different term",
+  "Без возможности снятия средств": "No withdrawal option",
+  "До минимальной суммы": "Up to minimum amount",
+  "В пределах начисленных процентов": "Within the accrued interest",
+  "A-Geld бессрочный": "A-Geld бессрочный",
   "Банкомат": "ATM",
   "Отделение банка": "Bank branch",
   "Обменный пункт": "Exchange office",
@@ -199,13 +272,6 @@
   "Активный": "Active",
   "Закрытый": "Closed",
   "Заблокированный": "Blocked",
-  "Автопролонгация": "Autoprolongation",
-  "Автопролонгация отключена": "Autoprolongation disabled",
-  "предыдущий слайд": "previous slide",
-  "актуальный слайд": "current slide",
-  "следующий слайд": "next slide",
-  "переключить назад": "turn back",
-  "переключить вперед": "turn forward",
   "Мои счета": "My accounts",
   "Открытые счета": "Opened accounts",
   "Заявки на открытие счета": "Open account requests",
@@ -241,8 +307,8 @@
   "Мои карты": "My cards",
   "Карточные продукты": "Card products",
   "На данный момент \n у Вас нет депозитов": "You currently have no deposits",
-  "Оформить депозит": "Open deposit",
-  "Сумма депозита": "Deposit amount",
+  "Рассчитайте доходность по депозиту": "Calculate the return on your deposit",
+  "Рассчитать": "Calculate",
   "Сбросить фильтр": "Reset filter",
   "Депозиты A-geld": "Deposits A-geld",
   "2023, АО «A-Geld», официальный сайт, универсальная лицензия ЦБ РФ № 2475": "2023, A-geld JSC, official site, universal license of the Central Bank of the Russian Federation No. 2475",
@@ -250,7 +316,6 @@
   "Наше приложение": "Our app",
   "Банкоматы и отделения": "Banks and branches",
   "Курсы валют": "Exchange rates",
-  "Контакты": "Contacts",
   "Список услуг": "Service list",
   "Документы": "Documents",
   "Вопросы и ответы": "Q&A",
@@ -282,39 +347,5 @@
   "По номеру карты": "By card number",
   "По реквизитам": "By requisites",
   "Мобильная связь": "Mobile communication",
-  "Горячая линия для частных лиц": "A hotline for individuals",
-  "Бесплатный звонок по России": "Free call in Russia",
-  "Для звонков за пределами России": "For calls outside Russia",
-  "Для жителей Москвы и Московской области": "For residents of Moscow and the Moscow region",
-  "Чат-боты в социальных сетях": "Chatbots on social networks",
-  "Вконтакте": "Vkontakte",
-  "Чат с банком": "Chat with the bank",
-  "Режим работы": "Operating mode",
-  "Консультация физических лиц": "Consultation of individuals",
-  "Консультация юридических лиц": "Consultation of legal entities",
-  "Блокировка карты": "Blocking the card",
-  "круглосуточно": "around the clock",
-  "Понедельник - Пятница: ": "Monday - Friday: ",
-  "Суббота: ": "Saturday: ",
-  "Воскресенье - ": "Sunday - ",
-  "выходной": "weekend",
-  "Горячая линия корпоративным клиентам": "Hotline for corporate clients",
-  "Техническая поддержка": "Technical support",
-  "Объекты в": "Objects in",
-  "Москве": "Moscow",
-  "Поиск по адресу или названию": "Search by address or name",
-  "Пыталово": "Pytalovo",
-  "Пыталовский": "Pytalovsky",
-  "Новый город": "A new city",
-  "4B": "4V",
-  "3B": "3V",
-  "Понедельник - Пятница: 9:00-19:00 Cуббота: 10:00-15:00 Воскресенье - выходной": "Monday - Friday: 9:00-19:00 Saturday: 10:00-15:00 Sunday - weekend",
-  "Понедельник - Пятница: 10:00-14:00 Cуббота: 11:00-13:00 Воскресенье - выходной": "Monday - Friday: 10:00-14:00 Saturday: 11:00-13:00 Sunday - weekend",
-  "Открыто до ": "Open until ",
-  "Закрыто до ": "Closed until",
-  "Показать полную информацию": "Show full information",
-  "Вернуться к списку": "Go back to the list",
-  "Открыто круглосуточно": "It is open around the clock",
-  "Без выходных, круглосуточно": "Seven days a week, around the clock",
   "Коммунальные платежи": "Utility payments"
 }
