--- a/src/shared/model/i18n/locales/ru/ru.json
+++ b/src/shared/model/i18n/locales/ru/ru.json
@@ -14,16 +14,24 @@
   "Перевести": "Перевести",
   "Оформить карту": "Оформить карту",
   "Показать больше": "Показать больше",
-  "Процентная ставка": "Процентная ставка",
-  "Сумма на депозитном счете": "Сумма на депозитном счете",
-  "Окончание срока вклада": "Окончание срока вклада",
   "До 30 сентября оформите ": "До 30 сентября оформите ",
   "до": "до",
+  "Процентная ставка": "Процентная ставка",
   "от": "от",
   "Минимальная сумма депозита": "Минимальная сумма депозита",
   "дней": "дней",
   "Срок депозита": "Срок депозита",
   "Оформить": "Оформить",
+  "Не откладывай жизнь на завтра!": "Не откладывай жизнь на завтра!",
+  " откроет новые горизонты для вас": " откроет новые горизонты для вас",
+  "Максимальная сумма депозита": "Максимальная сумма депозита",
+  "месяцев": "месяцев",
+  "Подробная информация": "Подробная информация",
+  "Номер депозитного счета": "Номер депозитного счета",
+  "Сумма на депозитном счете": "Сумма на депозитном счете",
+  "Окончание срока депозита": "Окончание срока депозита",
+  "Сумма в конце срока": "Сумма в конце срока",
+  "Доход по депозиту": "Доход по депозиту",
   "Назад": "Назад",
   "Вперед": "Вперед",
   "Основной": "Основной",
@@ -82,6 +90,8 @@
   "Принять": "Принять",
   "Отклонить": "Отклонить",
   "Поиск": "Поиск",
+  "Сумма депозита": "Сумма депозита",
+  "мес": "мес",
   "Количество символов от 6 до 20": "Количество символов от 6 до 20",
   "Есть строчные и заглавные буквы": "Есть строчные и заглавные буквы",
   "Есть цифры": "Есть цифры",
@@ -127,27 +137,78 @@
   "Информация о счете": "Информация о счете",
   "История операций": "История операций",
   "Счет не найден": "Счет не найден",
+  "Закрыто до ": "Закрыто до ",
+  "Открыто до ": "Открыто до ",
+  "Открыто круглосуточно": "Открыто круглосуточно",
+  "Показать полную информацию": "Показать полную информацию",
+  "Вернуться к списку": "Вернуться к списку",
+  "Поиск по адресу или названию": "Поиск по адресу или названию",
   "Авторизация": "Авторизация",
   "Введите код из смс": "Введите код из смс",
   "Введите пароль": "Введите пароль",
+  "Контакты": "Контакты",
+  "Горячая линия для частных лиц": "Горячая линия для частных лиц",
+  "Горячая линия корпоративным клиентам": "Горячая линия корпоративным клиентам",
+  "Техническая поддержка": "Техническая поддержка",
+  "Чат-боты в социальных сетях": "Чат-боты в социальных сетях",
+  "Режим работы": "Режим работы",
+  "Консультация физических лиц": "Консультация физических лиц",
+  "Консультация юридических лиц": "Консультация юридических лиц",
+  "Блокировка карты": "Блокировка карты",
+  "круглосуточно": "круглосуточно",
+  "Вы действительно хотите открыть депозит?": "Вы действительно хотите открыть депозит?",
+  "Отмена": "Отмена",
+  "Депозит A-Geld Базовый": "Deposit A-Geld Basic",
+  "RUB": "RUB",
+  "Капитализация": "Капитализация",
+  "Без капитализации": "Без капитализации",
+  "Ежедневная": "Ежедневная",
+  "Ежемесячная": "Ежемесячная",
+  "Ежеквартальная": "Ежеквартальная",
+  "Полугодовая": "Полугодовая",
+  "Ежегодная": "Ежегодная",
+  "Автоматическая пролонгация": "Автоматическая пролонгация",
+  "С пополнением": "С пополнением",
+  "С частичным снятием": "С частичным снятием",
+  "Закрытие в любой момент времени без перерасчета %": "Закрытие в любой момент времени без перерасчета %",
+  "Отказаться": "Отказаться",
+  "Оформить депозит": "Оформить депозит",
+  "Не удалось оформить депозит": "Не удалось оформить депозит",
+  "Ваш депозит успешно оформлен": "Ваш депозит успешно оформлен",
+  "Вернуться к странице депозитов": "Вернуться к странице депозитов",
   "Условия пролонгации депозита": "Условия пролонгации депозита",
   "Не удалось пролонгировать депозит": "Не удалось пролонгировать депозит",
   "Ваш депозит успешно пролонгирован": "Ваш депозит успешно пролонгирован",
   "Вернуться к странице депозита": "Вернуться к странице депозита",
-  "Срок пролонгации": "Срок пролонгации",
   "Пролонгировать депозит": "Пролонгировать депозит",
+  "Гибкие условия": "Гибкие условия",
+  "Депозит от 1 до 36 месяцев с возможностью пополнения": "Депозит от 1 до 36 месяцев с возможностью пополнения",
+  "Капитализация процентов": "Капитализация процентов",
+  "Проценты присоединяются к сумме депозита": "Проценты присоединяются к сумме депозита",
+  "Управление онлайн": "Управление онлайн",
+  "Открыть, пополнить и закрыть депозит можно через интернет-банк": "Открыть, пополнить и закрыть депозит можно через интернет-банк",
+  "Дополнительные взносы": "Дополнительные взносы",
+  "В зависимости от условий по депозиту вы можете совершать дополнительные взносы и увеличивать свой доход": "В зависимости от условий по депозиту вы можете совершать дополнительные взносы и увеличивать свой доход",
+  "Выбор из трех валют": "Выбор из трех валют",
+  "Выбирайте оптимальные валюту и условия по депозиту": "Выбирайте оптимальные валюту и условия по депозиту",
+  "Удобное пополнение": "Удобное пополнение",
+  "Пополнение через интернет-банк или в отделениях.": "Пополнение через интернет-банк или в отделениях.",
   "Депозит не найден": "Депозит не найден",
   "Перейти к списку депозитов": "Перейти к списку депозитов",
   "№ счета : ": "№ счета : ",
   "№ счета с процентами : ": "№ счета с процентами : ",
-  "Схема депозита": "Схема депозита",
+  "Тип продукта по сроку": "Тип продукта по сроку",
   "Срочный": "Срочный",
-  "Длительность существования": "Длительность существования",
-  "Ставка при досрочном отзыве": "Ставка при досрочном отзыве",
+  "Бессрочный": "Бессрочный",
   "Отзывной": "Отзывной",
+  "Вид капитализации процентов": "Вид капитализации процентов",
+  "Дата открытия": "Дата открытия",
+  "Автоматическая пролонгации": "Автоматическая пролонгации",
   "Изначальная сумма депозита": "Изначальная сумма депозита",
   "Отозвать": "Отозвать",
   "Пополнить": "Пополнить",
+  "Вы действительно хотите включить автоматическую пролонгацию депозита?": "Вы действительно хотите включить автоматическую пролонгацию депозита?",
+  "Вы действительно хотите отключить автоматическую пролонгацию депозита?": "Вы действительно хотите отключить автоматическую пролонгацию депозита?",
   "График начисления процентов": "График начисления процентов",
   "Информация о пополнении депозита": "Информация о пополнении депозита",
   "Пролонгация депозита": "Пролонгация депозита",
@@ -192,6 +253,18 @@
   "Дебетовая": "Дебетовая",
   "Депозитная": "Депозитная",
   "МИР": "МИР",
+  "2 месяца": "2 месяца",
+  "3 месяца": "3 месяца",
+  "6 месяцев": "6 месяцев",
+  "9 месяцев": "9 месяцев",
+  "1 год": "1 год",
+  "2 года": "2 года",
+  "3 года": "3 года",
+  "Другой срок": "Другой срок",
+  "Без возможности снятия средств": "Без возможности снятия средств",
+  "До минимальной суммы": "До минимальной суммы",
+  "В пределах начисленных процентов": "В пределах начисленных процентов",
+  "A-Geld бессрочный": "A-Geld бессрочный",
   "Банкомат": "Банкомат",
   "Отделение банка": "Отделение банка",
   "Обменный пункт": "Обменный пункт",
@@ -199,13 +272,6 @@
   "Активный": "Активный",
   "Закрытый": "Закрытый",
   "Заблокированный": "Заблокированный",
-  "Автопролонгация": "Автопролонгация",
-  "Автопролонгация отключена": "Автопролонгация отключена",
-  "предыдущий слайд": "предыдущий слайд",
-  "актуальный слайд": "актуальный слайд",
-  "следующий слайд": "следующий слайд",
-  "переключить назад": "переключить назад",
-  "переключить вперед": "переключить вперед",
   "Мои счета": "Мои счета",
   "Открытые счета": "Открытые счета",
   "Заявки на открытие счета": "Заявки на открытие счета",
@@ -241,8 +307,8 @@
   "Мои карты": "Мои карты",
   "Карточные продукты": "Карточные продукты",
   "На данный момент \n у Вас нет депозитов": "На данный момент \n у Вас нет депозитов",
-  "Оформить депозит": "Оформить депозит",
-  "Сумма депозита": "Сумма депозита",
+  "Рассчитайте доходность по депозиту": "Рассчитайте доходность по депозиту",
+  "Рассчитать": "Рассчитать",
   "Сбросить фильтр": "Сбросить фильтр",
   "Депозиты A-geld": "Депозиты A-geld",
   "2023, АО «A-Geld», официальный сайт, универсальная лицензия ЦБ РФ № 2475": "2023, АО «A-Geld», официальный сайт, универсальная лицензия ЦБ РФ № 2475",
@@ -250,7 +316,6 @@
   "Наше приложение": "Наше приложение",
   "Банкоматы и отделения": "Банкоматы и отделения",
   "Курсы валют": "Курсы валют",
-  "Контакты": "Контакты",
   "Список услуг": "Список услуг",
   "Документы": "Документы",
   "Вопросы и ответы": "Вопросы и ответы",
