--- a/src/shared/model/i18n/locales/ru/ru_old.json
+++ b/src/shared/model/i18n/locales/ru/ru_old.json
@@ -4,7 +4,6 @@
   "Пролонгировать": "Пролонгировать",
   "Отключить автопролонгацию": "Отключить автопролонгацию",
   "Включить автопролонгацию": "Включить автопролонгацию",
-  "Автоматическая пролонгация": "Автоматическая пролонгация",
   "Процентная ставка при досрочном отзыве депозита": "Процентная ставка при досрочном отзыве депозита",
   "Выполнить депозит": "Выполнить депозит",
   "Банки и отделения": "Банки и отделения",
@@ -14,5 +13,17 @@
   "Правилами дистанционного банковского обслуживания": "Правилами дистанционного банковского обслуживания",
   "и": "и",
   "Политикой конфиденциальности": "Политикой конфиденциальности",
-  "и даёте согласие на сбор и обработку информации": "и даёте согласие на сбор и обработку информации"
+  "и даёте согласие на сбор и обработку информации": "и даёте согласие на сбор и обработку информации",
+  "Окончание срока вклада": "Окончание срока вклада",
+  "Срок пролонгации": "Срок пролонгации",
+  "Схема депозита": "Схема депозита",
+  "Длительность существования": "Длительность существования",
+  "Ставка при досрочном отзыве": "Ставка при досрочном отзыве",
+  "Автопролонгация": "Автопролонгация",
+  "Автопролонгация отключена": "Автопролонгация отключена",
+  "предыдущий слайд": "предыдущий слайд",
+  "актуальный слайд": "актуальный слайд",
+  "следующий слайд": "следующий слайд",
+  "переключить назад": "переключить назад",
+  "переключить вперед": "переключить вперед"
 }
