--- a/src/shared/model/i18n/locales/en/en_old.json
+++ b/src/shared/model/i18n/locales/en/en_old.json
@@ -4,7 +4,6 @@
   "Пролонгировать": "Prolong",
   "Отключить автопролонгацию": "Disable automatic prolongation",
   "Включить автопролонгацию": "Enable automatic prolongation",
-  "Автоматическая пролонгация": "Automatic prolongation",
   "К списку депозитов": "Go to deposit list",
   "Процентная ставка при досрочном отзыве депозита": "Interest rate for early deposit withdrawal",
   "Выполнить депозит": "Make a deposit",
@@ -15,5 +14,36 @@
   "Правилами дистанционного банковского обслуживания": "the Remote Banking Service Rules",
   "и": "and",
   "Политикой конфиденциальности": "Privacy Policy",
-  "и даёте согласие на сбор и обработку информации": "and consent to the collection and processing of information"
+  "и даёте согласие на сбор и обработку информации": "and consent to the collection and processing of information",
+  "Окончание срока вклада": "Deposit end of term",
+  "Срок пролонгации": "Extension period",
+  "Схема депозита": "Deposit scheme",
+  "Длительность существования": "Term of existence",
+  "Ставка при досрочном отзыве": "Rate for early withdrawal",
+  "Автопролонгация": "Autoprolongation",
+  "Автопролонгация отключена": "Autoprolongation disabled",
+  "предыдущий слайд": "previous slide",
+  "актуальный слайд": "current slide",
+  "следующий слайд": "next slide",
+  "переключить назад": "turn back",
+  "переключить вперед": "turn forward",
+  "Бесплатный звонок по России": "Free call in Russia",
+  "Для звонков за пределами России": "For calls outside Russia",
+  "Для жителей Москвы и Московской области": "For residents of Moscow and the Moscow region",
+  "Вконтакте": "Vkontakte",
+  "Чат с банком": "Chat with the bank",
+  "Понедельник - Пятница: ": "Monday - Friday: ",
+  "Суббота: ": "Saturday: ",
+  "Воскресенье - ": "Sunday - ",
+  "выходной": "weekend",
+  "Объекты в": "Objects in",
+  "Москве": "Moscow",
+  "Пыталово": "Pytalovo",
+  "Пыталовский": "Pytalovsky",
+  "Новый город": "A new city",
+  "4B": "4V",
+  "3B": "3V",
+  "Понедельник - Пятница: 9:00-19:00 Cуббота: 10:00-15:00 Воскресенье - выходной": "Monday - Friday: 9:00-19:00 Saturday: 10:00-15:00 Sunday - weekend",
+  "Понедельник - Пятница: 10:00-14:00 Cуббота: 11:00-13:00 Воскресенье - выходной": "Monday - Friday: 10:00-14:00 Saturday: 11:00-13:00 Sunday - weekend",
+  "Без выходных, круглосуточно": "Seven days a week, around the clock"
 }
